# PUN-SO-TSHIA

./: README.md
jetbot-code/: main.py
yolo-api/: .gitignore  fastapi-test.py  main.py  main_1_用不到.py  main_2_用不到.py  pyproject.toml
yolo-train/: change_label_id_to_zero.py  main.py  pyproject.toml  remove_paper.py
