[project]
name = "yolo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basicsr>=1.4.2",
    "fastapi>=0.124.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "realesrgan>=0.3.0",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.235",
    "uvicorn>=0.38.0",
]
